trunk/Archive2/fc/be0a81f3d90539/output
main.cpp:2:7: error: use of undeclared identifier 'a123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263'
        0 == a123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263,
             ^
1 error generated.
